embeddable: trim div.top, prevent scrollbar appearance

--- a/src/examples/simple-atoms-model-embeddable/application.sass
+++ b/src/examples/simple-atoms-model-embeddable/application.sass
@@ -3,3 +3,6 @@ html
   padding: 0em
   height: 100%
   min-height: 100%
+
+.top
+  width: 98%
